fix systematic layout error